clone from diewland.com

--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-Thanks for hosting :'D
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>diewland.com</title>
+  <meta name="description" content="diewland website">
+  <meta name="author" content="diewland">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!--
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  -->
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="http://getskeleton.com/dist/css/normalize.css">
+  <link rel="stylesheet" href="http://getskeleton.com/dist/css/skeleton.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!--
+  <link rel="icon" type="image/png" href="images/favicon.png">
+  -->
+
+  <style type='text/css'>
+    html {
+      background-color: teal;
+    }
+    #main {
+      margin-top: 20%;
+      text-align: center;
+    }
+  </style>
+
+</head>
+<body>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+    <div class="row">
+      <div id='main'>
+
+        <!-- sticker line -->
+        <a title='LINE Sticker' href='https://store.line.me/stickershop/author/55318/en'><img src='https://sdl-stickershop.line.naver.jp/products/0/0/1/1123797/LINEStorePC/thumbnail_shop.png'></a>
+        <br />
+
+        <!-- google play -->
+        <a title='Google Play Apps' href='https://play.google.com/store/apps/developer?id=diewland'><img width='200' src='https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png' /></a>
+        <br />
+
+        <!-- stackoverflow -->
+        <a href="http://stackoverflow.com/users/466693/diewland"><img src="http://stackoverflow.com/users/flair/466693.png" width="208" height="58" alt="profile for diewland at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for diewland at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
+        <br />
+
+        <!-- github -->
+        <iframe src="http://githubbadge.appspot.com/diewland?s=1" style="border: 0;height: 142px;width: 200px;overflow: hidden;" frameBorder="0"></iframe>
+        <br />
+
+      </div>
+    </div>
+  </div>
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
+</html>
