--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
       margin-top: 20%;
       text-align: center;
     }
+    a {
+      text-decoration: none;
+      color: #FFF;
+    }
+    a:hover {
+      color: #FC3;
+      font-weight: bold;
+    }
   </style>
 
 </head>
@@ -51,6 +59,9 @@
 
         <!-- sticker line -->
         <a title='LINE Sticker' href='https://store.line.me/stickershop/author/55318/en'><img src='https://sdl-stickershop.line.naver.jp/products/0/0/1/1123797/LINEStorePC/thumbnail_shop.png'></a>
+        
+        <!-- github wiki -->
+        <a href='https://github.com/diewland/diewland.github.io/wiki' title='My wiki'>#wiki</a>        
         <br />
 
         <!-- google play -->
