move fread to github

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <!-- some links -->
             <div id='links'>
-                <a href='http://diewland.com/fread' title='Read feed'>#fread</a><br />
+                <a href='./fread/index.html' title='Read feed'>#fread</a><br />
                 <a href='https://github.com/diewland/diewland.github.io/wiki' title='My Wiki'>#wiki</a>
             </div>
 
