add block game link

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <!-- some links -->
             <div id='links'>
                 <a href='./fread/index.html' title='Read feed'>#fread</a><br />
+                <a href='./block/index.html' title='Color block game'>#block</a><br />
                 <a href='https://github.com/diewland/diewland.github.io/wiki' title='My Wiki'>#wiki</a>
             </div>
 
