move fread to diewland.com/fread

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             <!-- some links -->
             <div id='links'>
-                <div class='balloon'><a href='./fread/index.html' title='Read feed'>fread</a></div>
+                <div class='balloon'><a href='http://diewland.com/fread' title='Read feed'>fread</a></div>
                 <div class='balloon'><a href='./block/index.html' title='Color block game'>block</a></div>
             </div>
 
