--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <!-- some links -->
             <div id='links'>
                 <div class='balloon'><a href='http://diewland.com/fread' title='Read feed'>fread</a></div>
-                <div class='balloon'><a href='./block/index.html' title='Color block game'>block</a></div>
+                <div class='balloon'><a href='http://diewland.com/block' title='Color block game'>block</a></div>
             </div>
 
             <div class='clear'></div>
