add ingress biocard

--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
 
         <!-- grids -->
         <div class="grid">
-            <div class="grid-item" style='width: 350px; height: 585px;'>
-                <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe style="width: 100%; height: 100%; border: 0; overflow: hidden;" src="http://lightwidget.com/widgets/e3473b849bbb5ad5b5281877a3af33b7.html" id="lightwidget_e3473b849b" name="lightwidget_e3473b849b"  scrolling="no" allowtransparency="true" class="lightwidget-widget"></iframe>
+            <div class="grid-item">
+                <a title='Enlightened Thailand' href='https://plus.google.com/communities/102374626379330339397'><img width='350' src='./agent-diewland.jpg' /></a>
             </div>
             <div class="grid-item" style='width: 350px; height: 585px;'>
                 <a class="twitter-timeline" data-width="350" data-height="585" data-theme="light" data-link-color="#2B7BB9" href="https://twitter.com/diewland">Tweets by diewland</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 <script>window.twttr = (function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], t = window.twttr || {}; if (d.getElementById(id)) return t; js = d.createElement(s); js.id = id; js.src = "https://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); t._e = []; t.ready = function(f) { t._e.push(f); }; return t; }(document, "script", "twitter-wjs"));</script>
+            </div>
+            <div class="grid-item" style='width: 350px; height: 585px;'>
+                <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe style="width: 100%; height: 100%; border: 0; overflow: hidden;" src="http://lightwidget.com/widgets/e3473b849bbb5ad5b5281877a3af33b7.html" id="lightwidget_e3473b849b" name="lightwidget_e3473b849b"  scrolling="no" allowtransparency="true" class="lightwidget-widget"></iframe>
             </div>
             <div class="grid-item">
                 <iframe src="http://githubbadge.appspot.com/diewland?s=1" style="border: 0; height: 125px; width: 200px; overflow: hidden;" frameBorder="0"></iframe>
