--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             }
             /* wallpaper */
             html { 
-                background: url("//c6.staticflickr.com/2/1480/24641937989_5fce3713f1_h.jpg") no-repeat center center fixed; 
+                background: url("./wood-wallpaper-3.jpg") no-repeat center center fixed; 
                 -webkit-background-size: cover;
                 -moz-background-size: cover;
                 -o-background-size: cover;
@@ -68,7 +68,7 @@
 
         <!-- footer -->
         <div id='wpp-credit'>
-            <a href='https://www.flickr.com/photos/lennykphotography/24641937989/in/dateposted/'>Aurora Borealis by Lenny K Photography</a>
+            <a href='http://phandroid.com/2015/03/14/android-wallpaper-wood/'>Knock on Wood by Phandroid</a>
         </div>
 
         <!-- load scripts -->
