--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- grids -->
         <div class="grid">
             <div class="grid-item">
-                <a title='Enlightened Thailand' href='https://plus.google.com/communities/102374626379330339397'><img src='./agent-diewland.jpg' width='350' /></a>
+                <a title='Enlightened Thailand' href='https://plus.google.com/communities/102374626379330339397'><img src='./diewland-2016-350.png' /></a>
             </div>
             <div class="grid-item" style='width: 350px; height: 585px;'>
                 <a class="twitter-timeline" data-width="350" data-height="585" data-theme="light" data-link-color="#2B7BB9" href="https://twitter.com/diewland">Tweets by diewland</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
