--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             <div class="grid-item">
                 <a href="http://stackoverflow.com/users/466693/diewland"><img src="http://stackoverflow.com/users/flair/466693.png" width="208" height="58" alt="profile for diewland at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for diewland at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
             </div>
+            <div class="grid-item">
+                <a href="https://twitter.com/hashtag/teaminstinct"><img width='200' src="./pokemon-go-team-instinct-sticker.png" alt="#teaminstinct" title="#teaminstinct"></a>
+            </div>
         </div>
 
         <!-- footer -->
