--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <!-- grids -->
         <div class="grid">
             <div class="grid-item">
+                <a href='http://surfacage.tumblr.com/post/148884792904/some-guy-instinct-just-memes-around-uselessly-i'><img title='#teaminstinct' src='http://66.media.tumblr.com/8bc80b721791fb16f8aa5128b69267a1/tumblr_obus51V0q11qcdr0xo7_1280.png' width='350' /></a>
+            </div>
+            <div class="grid-item">
                 <a title='Enlightened Thailand' href='https://plus.google.com/communities/102374626379330339397'><img src='./diewland-2016-350.png' /></a>
             </div>
             <div class="grid-item" style='width: 350px; height: 585px;'>
@@ -56,16 +59,13 @@
                 <iframe src="http://githubbadge.appspot.com/diewland?s=1" style="border: 0; height: 125px; width: 200px; overflow: hidden;" frameBorder="0"></iframe>
             </div>
             <div class="grid-item">
-                <a id='line' title='LINE Sticker' href='https://store.line.me/stickershop/author/55318/en'><img src='https://sdl-stickershop.line.naver.jp/products/0/0/1/1123797/LINEStorePC/thumbnail_shop.png'></a>
+                <a href="http://stackoverflow.com/users/466693/diewland"><img src="http://stackoverflow.com/users/flair/466693.png" width="208" height="58" alt="profile for diewland at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for diewland at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
             </div>
             <div class="grid-item">
                 <a title='Google Play Apps' href='https://play.google.com/store/apps/developer?id=diewland'><img width='200' height='60' src='https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png' /></a>
             </div>
             <div class="grid-item">
-                <a href="http://stackoverflow.com/users/466693/diewland"><img src="http://stackoverflow.com/users/flair/466693.png" width="208" height="58" alt="profile for diewland at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for diewland at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
-            </div>
-            <div class="grid-item">
-                <a href="https://twitter.com/hashtag/teaminstinct"><img width='140' src="./pokemon-go-team-instinct-sticker.png" alt="#teaminstinct" title="#teaminstinct"></a>
+                <a id='line' title='LINE Sticker' href='https://store.line.me/stickershop/author/55318/en'><img src='https://sdl-stickershop.line.naver.jp/products/0/0/1/1123797/LINEStorePC/thumbnail_shop.png'></a>
             </div>
         </div>
 
