--- a/index.html
+++ b/index.html
@@ -15,13 +15,9 @@
                 margin-right: 5px;
                 margin-bottom: 5px;
             }
-            /* wallpaper */
+            /* wallpaper - http://rpg-directory.com/thread-30483.html */
             html { 
-                background: url("./wood-wallpaper-3.jpg") no-repeat center center fixed; 
-                -webkit-background-size: cover;
-                -moz-background-size: cover;
-                -o-background-size: cover;
-                background-size: cover;
+                background: url('./6Kok1.png');
             }
             #wpp-credit {
                 color: #FFF;
