--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 text-decoration: none;
             }
         </style>
+        <link rel="stylesheet" href="./reportcard/badges.css">
     </head>
     <body>
 
@@ -63,6 +64,9 @@
             <div class="grid-item">
                 <a id='line' title='LINE Sticker' href='https://store.line.me/stickershop/author/55318/en'><img src='https://sdl-stickershop.line.naver.jp/products/0/0/1/1123797/LINEStorePC/thumbnail_shop.png'></a>
             </div>
+            <div class="grid-item" style='width: 350px;'>
+                <div class="report-card codeschool"></div>
+            </div>
         </div>
 
         <!-- footer -->
@@ -74,6 +78,7 @@
         <script src='./jquery-3.1.0.min.js'></script>
         <script src='./masonry.pkgd.min.js'></script>
         <script src='./imagesloaded.pkgd.min.js'></script>
+        <script src='./reportcard/reportcard.js'></script>
 
         <!-- pin! -->
         <script>
@@ -84,6 +89,16 @@
                 });
             });
         </script>
+
+        <!-- reportcard -->
+        <script>
+        $('.report-card.codeschool').reportCard({
+            userName: 'diewland',
+            site: 'codeschool',
+            badgesAmount: 6
+        });
+        </script>
+
 
     </body>
 </html>
