update wallpaper url

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <!-- footer -->
         <div id='wpp-credit'>
-            <a href='http://phandroid.com/2015/03/14/android-wallpaper-wood/'>Knock on Wood by Phandroid</a>
+            <a href='http://rpg-directory.com/thread-30483.html'>Tile-Able Wood Texture by ROBOTIC</a>
         </div>
 
         <!-- load scripts -->
