fixed background image

--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
             }
             /* wallpaper */
             html { 
-                background: url("./wood-wallpaper-3.jpg") no-repeat center center fixed; 
-                -webkit-background-size: cover;
-                -moz-background-size: cover;
-                -o-background-size: cover;
-                background-size: cover;
+                background: url("./6Kok1.png");
             }
             #wpp-credit {
                 color: #FFF;
