--- a/index.html
+++ b/index.html
@@ -40,17 +40,20 @@
         <!-- grids -->
         <div class="grid">
             <div class="grid-item">
-                <a href='http://surfacage.tumblr.com/post/148884792904/some-guy-instinct-just-memes-around-uselessly-i'><img title='#teaminstinct' src='http://66.media.tumblr.com/8bc80b721791fb16f8aa5128b69267a1/tumblr_obus51V0q11qcdr0xo7_1280.png' width='350' /></a>
+                <a title='Enlightened Thailand' href='https://plus.google.com/communities/102374626379330339397'><img src='./diewland-2016-350.png' /></a>
             </div>
             <div class="grid-item">
-                <a title='Enlightened Thailand' href='https://plus.google.com/communities/102374626379330339397'><img src='./diewland-2016-350.png' /></a>
+                <a href='http://surfacage.tumblr.com/post/148884792904/some-guy-instinct-just-memes-around-uselessly-i'><img title='#teaminstinct' src='http://66.media.tumblr.com/8bc80b721791fb16f8aa5128b69267a1/tumblr_obus51V0q11qcdr0xo7_1280.png' width='350' /></a>
+            </div>
+            <div class="grid-item" style='width: 350px; height: 585px;'>
+                <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe style="width: 100%; height: 100%; border: 0; overflow: hidden;" src="http://lightwidget.com/widgets/e3473b849bbb5ad5b5281877a3af33b7.html" id="lightwidget_e3473b849b" name="lightwidget_e3473b849b"  scrolling="no" allowtransparency="true" class="lightwidget-widget"></iframe>
             </div>
             <div class="grid-item" style='width: 350px; height: 585px;'>
                 <a class="twitter-timeline" data-width="350" data-height="585" data-theme="light" data-link-color="#2B7BB9" href="https://twitter.com/diewland">Tweets by diewland</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 <script>window.twttr = (function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], t = window.twttr || {}; if (d.getElementById(id)) return t; js = d.createElement(s); js.id = id; js.src = "https://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); t._e = []; t.ready = function(f) { t._e.push(f); }; return t; }(document, "script", "twitter-wjs"));</script>
             </div>
-            <div class="grid-item" style='width: 350px; height: 585px;'>
-                <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe style="width: 100%; height: 100%; border: 0; overflow: hidden;" src="http://lightwidget.com/widgets/e3473b849bbb5ad5b5281877a3af33b7.html" id="lightwidget_e3473b849b" name="lightwidget_e3473b849b"  scrolling="no" allowtransparency="true" class="lightwidget-widget"></iframe>
+            <div class="grid-item" style='width: 350px; height: 450px;'>
+                <div class="report-card codeschool"></div>
             </div>
             <div class="grid-item">
                 <iframe src="http://githubbadge.appspot.com/diewland?s=1" style="border: 0; height: 125px; width: 200px; overflow: hidden;" frameBorder="0"></iframe>
@@ -63,9 +66,6 @@
             </div>
             <div class="grid-item">
                 <a id='line' title='LINE Sticker' href='https://store.line.me/stickershop/author/55318/en'><img src='https://sdl-stickershop.line.naver.jp/products/0/0/1/1123797/LINEStorePC/thumbnail_shop.png'></a>
-            </div>
-            <div class="grid-item" style='width: 350px;'>
-                <div class="report-card codeschool"></div>
             </div>
         </div>
 
@@ -95,7 +95,7 @@
         $('.report-card.codeschool').reportCard({
             userName: 'diewland',
             site: 'codeschool',
-            badgesAmount: 6
+            badgesAmount: 12,
         });
         </script>
 
