added scrollbar to cardreport

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a class="twitter-timeline" data-width="350" data-height="585" data-theme="light" data-link-color="#2B7BB9" href="https://twitter.com/diewland">Tweets by diewland</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 <script>window.twttr = (function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], t = window.twttr || {}; if (d.getElementById(id)) return t; js = d.createElement(s); js.id = id; js.src = "https://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); t._e = []; t.ready = function(f) { t._e.push(f); }; return t; }(document, "script", "twitter-wjs"));</script>
             </div>
-            <div class="grid-item" style='width: 350px; height: 450px;'>
+            <div class="grid-item" style='width: 350px; height: 373px; overflow-x: hidden; overflow-y: scroll;'>
                 <div class="report-card codeschool"></div>
             </div>
             <div class="grid-item">
@@ -95,7 +95,7 @@
             $('.report-card.codeschool').reportCard({
                 userName: 'diewland',
                 site: 'codeschool',
-                badgesAmount: 12,
+                badgesAmount: 99,
             });
         </script>
 
