updated bio card

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- grids -->
         <div class="grid">
             <div class="grid-item">
-                <a title='Ingress BioCard' href='/biocard/'><img src='./diewland-2016-350.png' /></a>
+                <a title='Enlightened Thailand' href='https://plus.google.com/communities/102374626379330339397'><img src='./diewland-2016-350.png' /></a>
             </div>
             <div class="grid-item">
                 <a href='http://surfacage.tumblr.com/post/148884792904/some-guy-instinct-just-memes-around-uselessly-i'><img title='#teaminstinct' src='http://66.media.tumblr.com/8bc80b721791fb16f8aa5128b69267a1/tumblr_obus51V0q11qcdr0xo7_1280.png' width='350' /></a>
