--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             }
         </style>
         <link rel="stylesheet" href="./reportcard/badges.css">
+        <link rel="stylesheet" href="./grayscale.css">
     </head>
     <body>
 
